--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -73,12 +73,16 @@
         app:layout_constraintEnd_toEndOf="parent" />
     <!-- CREATE ACCOUNT NA LINK OR TEXT  !-->
     <TextView
+        android:id="@+id/signUpClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="220dp"
         android:layout_marginRight="220dp"
         android:layout_marginBottom="112dp"
         android:text="@string/create_account"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="goToSignUp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
