Getting user input sign up pa lang

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -115,19 +115,20 @@
     <!-- SIGN UP BUTTON !-->
     <Button
         android:id="@+id/signUpButton"
-        android:onClick="goToEmailVerification"
-
         android:layout_width="176dp"
         android:layout_height="57dp"
         android:layout_marginEnd="116dp"
         android:layout_marginRight="116dp"
         android:layout_marginBottom="136dp"
         android:background="@drawable/roundedbutton"
+        android:clickable="true"
+        android:onClick="handleText"
         android:text="@string/sign_up"
         android:textAllCaps="false"
         app:backgroundTint="#FFC107"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:focusable="true" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
