CHECKPOINT Sending Email Checks if verif code entered is correct if correct deretso login if mali prompt Di pa nagagawa si resend otp Lalagyan ko na muna ng database

--- a/app/src/main/res/layout/activity_email_verification.xml
+++ b/app/src/main/res/layout/activity_email_verification.xml
@@ -124,6 +124,7 @@
         android:layout_marginBottom="200dp"
         android:background="@drawable/roundedbutton"
         android:text="@string/verify"
+        android:onClick="codeInput"
         android:textAllCaps="false"
         app:backgroundTint="#FFC107"
         app:layout_constraintBottom_toBottomOf="parent"
