--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="slate">#708090 </color>
+    <color name="yellow">#FBE192 </color>
+    <color name="smoke"> #F8F9FA</color>
+
+
 </resources>
