Nakakapag switch na tapos may landing page na

--- a/app/src/main/res/layout/activity_account_details.xml
+++ b/app/src/main/res/layout/activity_account_details.xml
@@ -44,6 +44,7 @@
         android:layout_width="49dp"
         android:layout_height="45dp"
         android:layout_marginEnd="220dp"
+        android:onClick="goToLandingPage"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/food"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -207,6 +208,7 @@
         android:id="@+id/change_password_button"
         android:layout_width="162dp"
         android:layout_height="45dp"
+        android:onClick="goToVerifyPassword"
         android:layout_marginEnd="208dp"
         android:layout_marginBottom="88dp"
         android:background="@drawable/rectangleroundedcorner"
