--- a/app/src/main/res/layout/activity_reset_password_channel.xml
+++ b/app/src/main/res/layout/activity_reset_password_channel.xml
@@ -14,6 +14,7 @@
         android:layout_marginBottom="340dp"
         android:background="@drawable/rectangle"
         android:text="@string/phone_number"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -54,6 +55,7 @@
         android:layout_width="59dp"
         android:layout_height="35dp"
         android:layout_marginEnd="344dp"
+        android:onClick="goToVerifyPassword"
         android:layout_marginBottom="668dp"
         android:contentDescription="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -68,6 +70,7 @@
         android:layout_marginEnd="93dp"
         android:layout_marginBottom="405dp"
         android:text="@string/email_address"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
