--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -105,6 +105,7 @@
         android:gravity="center|start"
         android:paddingStart="70dp"
         android:paddingEnd="0dp"
+        android:onClick="goToAccountDetails"
         android:text="@string/edit_account"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -246,6 +247,7 @@
         android:layout_width="49dp"
         android:layout_height="45dp"
         android:layout_marginEnd="220dp"
+        android:onClick="goToLandingPage"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
