--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -11,7 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="116dp"
-        android:layout_marginRight="116dp"
         android:layout_marginBottom="552dp"
         android:text="@string/log_in"
         android:textColor="@color/black"
@@ -25,7 +24,6 @@
         android:layout_width="227dp"
         android:layout_height="52dp"
         android:layout_marginEnd="92dp"
-        android:layout_marginRight="92dp"
         android:layout_marginBottom="436dp"
         android:background="@drawable/roundedshapetext"
         android:ems="10"
@@ -33,9 +31,7 @@
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:paddingStart="40dp"
-        android:paddingLeft="40dp"
         android:paddingEnd="15dp"
-        android:paddingRight="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
     <!--  PASSWORD INPUT NA TEXTBOX !-->
@@ -44,7 +40,6 @@
         android:layout_width="227dp"
         android:layout_height="52dp"
         android:layout_marginEnd="92dp"
-        android:layout_marginRight="92dp"
         android:layout_marginBottom="340dp"
         android:background="@drawable/roundedshapetext"
         android:ems="10"
@@ -52,9 +47,7 @@
         android:importantForAutofill="no"
         android:inputType="textPassword"
         android:paddingStart="40dp"
-        android:paddingLeft="40dp"
         android:paddingEnd="15dp"
-        android:paddingRight="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
     <!-- LOGIN NA BUTTON !-->
@@ -63,8 +56,8 @@
         android:layout_width="176dp"
         android:layout_height="57dp"
         android:layout_marginEnd="116dp"
-        android:layout_marginRight="116dp"
         android:layout_marginBottom="220dp"
+        android:onClick="goToLandingPage"
         android:background="@drawable/roundedbutton"
         android:text="@string/log_in"
         android:textAllCaps="false"
@@ -77,7 +70,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="220dp"
-        android:layout_marginRight="220dp"
         android:layout_marginBottom="112dp"
         android:text="@string/create_account"
         android:clickable="true"
@@ -91,7 +83,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="200dp"
-        android:layout_marginRight="200dp"
         android:layout_marginBottom="104dp"
         android:text="@string/line"
         android:textSize="15pt"
@@ -102,7 +93,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="76dp"
-        android:layout_marginRight="76dp"
         android:layout_marginBottom="112dp"
         android:text="@string/forgot_password"
         android:textColor="@color/black"
@@ -115,7 +105,6 @@
         android:layout_width="24dp"
         android:layout_height="27dp"
         android:layout_marginEnd="284dp"
-        android:layout_marginRight="284dp"
         android:layout_marginBottom="448dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +116,6 @@
         android:layout_width="24dp"
         android:layout_height="27dp"
         android:layout_marginEnd="284dp"
-        android:layout_marginRight="284dp"
         android:layout_marginBottom="352dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
