--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -60,6 +60,7 @@
         android:id="@+id/go_back_button"
         android:layout_width="59dp"
         android:layout_height="35dp"
+        android:onClick="goToVerifyPassword"
         android:layout_marginEnd="344dp"
         android:layout_marginBottom="668dp"
         android:contentDescription="@string/back"
