--- a/app/src/main/res/layout/activity_verify_password.xml
+++ b/app/src/main/res/layout/activity_verify_password.xml
@@ -12,6 +12,7 @@
         android:layout_height="35dp"
         android:layout_marginEnd="344dp"
         android:layout_marginBottom="668dp"
+        android:onClick="goToAccountDetails"
         android:contentDescription="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,12 +72,14 @@
         android:layout_marginBottom="340dp"
         android:background="@drawable/roundedshapetext"
         android:text="@string/continue_password"
+        android:onClick="goToResetPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
+        android:onClick="goToResetPasswordChannel"
         android:layout_height="wrap_content"
         android:layout_marginEnd="144dp"
         android:layout_marginBottom="300dp"
