--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -146,6 +146,7 @@
     <ImageView
         android:id="@+id/background_container"
         android:layout_width="144dp"
+        android:onClick="goToChosenItem"
         android:layout_height="198dp"
         android:layout_marginEnd="224dp"
         android:layout_marginBottom="380dp"
@@ -160,6 +161,7 @@
         android:layout_height="99dp"
         android:layout_marginEnd="239dp"
         android:layout_marginBottom="460dp"
+        android:onClick="goToChosenItem"
         android:contentDescription="@string/image_preview"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -174,6 +176,7 @@
         android:layout_marginBottom="432dp"
         android:text="@string/price_item"
         android:textColor="@color/black"
+        android:onClick="goToChosenItem"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -186,6 +189,7 @@
         android:gravity="start"
         android:text="@string/item_description"
         android:textColor="@color/black"
+        android:onClick="goToChosenItem"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -195,6 +199,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="280dp"
         android:layout_marginBottom="400dp"
+        android:onClick="goToChosenItem"
         android:text="@string/item_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
