--- a/app/src/main/res/layout/activity_account_details.xml
+++ b/app/src/main/res/layout/activity_account_details.xml
@@ -58,6 +58,7 @@
         android:layout_marginEnd="132dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/recipe"
+        android:onClick="goToRecipe"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/chef_hat" />
