--- a/app/src/main/res/layout/activity_grocery_item.xml
+++ b/app/src/main/res/layout/activity_grocery_item.xml
@@ -97,6 +97,7 @@
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/recipe"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:onClick="goToRecipe"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/chef_hat" />
 
