--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -44,6 +44,7 @@
         android:layout_width="49dp"
         android:layout_height="45dp"
         android:layout_marginEnd="132dp"
+        android:onClick="goToRecipe"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/recipe"
         app:layout_constraintBottom_toBottomOf="parent"
