--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="slate">#708090 </color>
     <color name="yellow">#FBE192 </color>
     <color name="smoke"> #F8F9FA</color>
-
+    <color name="orange"> #E8833B </color>
+    <color name="violet"> #8313DD </color>
 
 </resources>
