--- a/app/src/main/res/layout/activity_email_verification.xml
+++ b/app/src/main/res/layout/activity_email_verification.xml
@@ -111,7 +111,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_verify"
         android:layout_width="176dp"
         android:layout_height="57dp"
         android:layout_marginEnd="116dp"
