--- a/app/src/main/res/layout/activity_recipe_page.xml
+++ b/app/src/main/res/layout/activity_recipe_page.xml
@@ -11,7 +11,7 @@
         android:id="@+id/white_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="68dp"
         android:background="@drawable/whitebackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -158,11 +158,13 @@
         android:layout_height="354dp"
         android:layout_marginEnd="92dp"
         android:layout_marginBottom="85dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/yellow_container"
+        android:scaleType="fitCenter"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/recipeyellowcontainer" />
+        app:srcCompat="@drawable/recipeyellowcontainer"
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/item_price"
@@ -174,8 +176,10 @@
         android:text="@string/price_item"
         android:textColor="@color/black"
         android:textSize="12pt"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/food_more_info"
@@ -185,19 +189,23 @@
         android:layout_marginBottom="112dp"
         android:text="@string/click_for_info"
         android:textSize="5pt"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="gone" />
 
     <ImageView
         android:id="@+id/food_image"
         android:layout_width="183dp"
-        android:contentDescription="@string/image_preview"
         android:layout_height="205dp"
         android:layout_marginEnd="188dp"
         android:layout_marginBottom="280dp"
+        android:contentDescription="@string/image_preview"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/user_2" />
+        app:srcCompat="@drawable/user_2"
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/food_name"
@@ -207,8 +215,10 @@
         android:layout_marginBottom="216dp"
         android:text="@string/food_name"
         android:textSize="13pt"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/item_description"
@@ -217,8 +227,10 @@
         android:layout_marginEnd="140dp"
         android:layout_marginBottom="196dp"
         android:text="@string/description_chosen_item"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="gone" />
 
     <ImageView
         android:id="@+id/add_to_cart_symbol"
@@ -227,23 +239,19 @@
         android:layout_marginEnd="116dp"
         android:layout_marginBottom="128dp"
         android:contentDescription="@string/plus_sign_icon"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/plus" />
+        app:srcCompat="@drawable/plus"
+        tools:visibility="gone" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:paddingStart="3dp"
-        android:paddingEnd="0dp"
-        android:layout_width="30dp"
-        android:layout_height="29dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="128dp"
-        android:background="@drawable/rounded_corner"
-        android:gravity="center"
-        android:text="@string/number_one"
-        android:textColor="@color/white"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recipeRV"
+        android:layout_width="match_parent"
+        android:layout_height="472dp"
+        android:layout_marginBottom="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
