DONE NA LAHAT NG FUNCTIONALITY PUSH AKO MAMAYA YUNG MAAYOS NA DATA NAKAW LANG AKO HAHAHAHA

--- a/app/src/main/res/layout/activity_grocery_item.xml
+++ b/app/src/main/res/layout/activity_grocery_item.xml
@@ -11,57 +11,46 @@
         android:id="@+id/white_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/whitebackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/item_description5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="204dp"
-        android:layout_marginBottom="180dp"
-        android:gravity="start"
-        android:text="@string/description_chosen_item"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="59dp"
+        android:layout_height="35dp"
+        android:onClick="goToLandingPage"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/left_arrow" />
 
     <TextView
-        android:id="@+id/item_description2"
-        android:layout_width="wrap_content"
+        android:id="@+id/groceryItemNameSpecific"
+        android:layout_width="310dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="148dp"
-        android:layout_marginBottom="324dp"
+        android:layout_marginBottom="312dp"
         android:gravity="start"
         android:text="@string/item_description"
+        android:textAlignment="textStart"
         android:textColor="@color/black"
-        android:textSize="13pt"
+        android:textSize="10pt"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/item_price"
+        android:id="@+id/groceryItemPriceSpecific"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="218dp"
+        android:layout_marginEnd="84dp"
+        android:layout_marginBottom="196dp"
         android:gravity="start"
         android:text="@string/price_item"
         android:textColor="@color/black"
         android:textSize="15pt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/item_name2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="276dp"
-        android:layout_marginBottom="296dp"
-        android:text="@string/item_name"
-        android:textSize="8pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -105,6 +94,7 @@
         android:id="@+id/cartButton"
         android:layout_width="49dp"
         android:layout_height="45dp"
+        android:onClick="goToCart"
         android:layout_marginEnd="52dp"
         android:layout_marginBottom="5dp"
         android:contentDescription="@string/cart"
@@ -113,30 +103,30 @@
         app:srcCompat="@drawable/shopping_cart" />
 
     <ImageView
-        android:id="@+id/image_of_food"
+        android:id="@+id/groceryItemImageSpecific"
         android:layout_width="244dp"
         android:layout_height="301dp"
-        android:layout_marginEnd="84dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="412dp"
         android:contentDescription="@string/image_preview"
-        android:layout_marginBottom="384dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/image_3" />
 
     <EditText
-        android:id="@+id/quantity_of_item"
-        android:gravity="center"
+        android:id="@+id/quantity"
         android:layout_width="126dp"
-        android:text="@string/number_one"
-        android:hint="@string/empty"
-        android:importantForAutofill="no"
         android:layout_height="59dp"
         android:layout_marginEnd="244dp"
-        android:layout_marginBottom="212dp"
+        android:layout_marginBottom="184dp"
         android:background="@drawable/roundedshapetext"
         android:ems="10"
+        android:gravity="center"
+        android:hint="@string/empty"
+        android:importantForAutofill="no"
         android:inputType="number"
+        android:text="@string/number_one"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -145,6 +135,7 @@
         android:layout_width="228dp"
         android:layout_height="50dp"
         android:layout_marginEnd="32dp"
+        android:onClick="addToCartGroceryItem"
         android:layout_marginBottom="100dp"
         android:background="@drawable/roundedbutton"
         android:backgroundTint="@color/yellow"
@@ -156,33 +147,36 @@
 
     <ImageView
         android:id="@+id/favorites_button"
-        android:contentDescription="@string/favorites"
         android:layout_width="59dp"
         android:layout_height="51dp"
         android:layout_marginEnd="300dp"
         android:layout_marginBottom="100dp"
+        android:contentDescription="@string/favorites"
         android:scaleType="fitCenter"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/heart" />
 
     <ImageView
-        android:id="@+id/reduce_quantity_item"
+        android:id="@+id/decrementbutton"
         android:layout_width="26dp"
         android:layout_height="30dp"
-        android:contentDescription="@string/reduce_quantity_icon"
         android:layout_marginEnd="328dp"
-        android:layout_marginBottom="226dp"
+        android:layout_marginBottom="196dp"
+        android:onClick="decrement"
+        android:contentDescription="@string/reduce_quantity_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/left_filled_arrow_triangle" />
 
     <ImageView
-        android:id="@+id/reduce_quantity_item3"
+        android:id="@+id/incrementbutton"
         android:layout_width="26dp"
         android:layout_height="30dp"
-        android:layout_marginEnd="265dp"
-        android:layout_marginBottom="226dp"
+        android:layout_marginEnd="260dp"
+        android:layout_marginBottom="196dp"
+        android:onClick="increment"
         android:contentDescription="@string/reduce_quantity_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
