--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -58,6 +58,7 @@
         android:layout_marginEnd="52dp"
         android:layout_marginBottom="5dp"
         android:contentDescription="@string/cart"
+        android:onClick="gotoCart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/shopping_cart" />
@@ -69,6 +70,7 @@
         android:layout_marginEnd="324dp"
         android:layout_marginBottom="688dp"
         android:contentDescription="@string/searchIcon"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/magnifiying_glass" />
@@ -86,6 +88,7 @@
         android:inputType="textPersonName"
         android:paddingStart="55dp"
         android:paddingEnd="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -96,6 +99,7 @@
         android:layout_marginEnd="308dp"
         android:layout_marginBottom="608dp"
         android:contentDescription="@string/meat_icon"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/steak" />
@@ -107,6 +111,7 @@
         android:layout_marginEnd="244dp"
         android:layout_marginBottom="608dp"
         android:contentDescription="@string/fish_icon"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/fish" />
@@ -118,6 +123,7 @@
         android:layout_marginEnd="180dp"
         android:layout_marginBottom="608dp"
         android:contentDescription="@string/vegetable_icon"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/eggplant" />
@@ -129,6 +135,7 @@
         android:layout_marginEnd="116dp"
         android:layout_marginBottom="608dp"
         android:contentDescription="@string/fruit_icon"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/apple" />
@@ -140,44 +147,62 @@
         android:layout_marginEnd="52dp"
         android:layout_marginBottom="608dp"
         android:contentDescription="@string/jar_icon"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/butter_jar" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/groceryRV"
+            android:layout_width="match_parent"
+            android:layout_height="580dp"
+            android:layout_marginTop="80dp" />
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/background_container"
         android:layout_width="144dp"
-        android:onClick="goToChosenItem"
         android:layout_height="198dp"
         android:layout_marginEnd="224dp"
         android:layout_marginBottom="380dp"
         android:contentDescription="@string/image_background"
+        android:onClick="goToChosenItem"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/landingpagebackground" />
 
     <ImageView
-        android:id="@+id/image_of_food"
+        android:id="@+id/groceryItemImageSpecific"
         android:layout_width="117dp"
         android:layout_height="99dp"
         android:layout_marginEnd="239dp"
         android:layout_marginBottom="460dp"
-        android:onClick="goToChosenItem"
         android:contentDescription="@string/image_preview"
+        android:onClick="goToChosenItem"
         android:scaleType="centerCrop"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/image_2" />
 
     <TextView
-        android:id="@+id/item_price"
+        android:id="@+id/groceryItemPriceSpecific"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="308dp"
         android:layout_marginBottom="432dp"
+        android:onClick="goToChosenItem"
         android:text="@string/price_item"
         android:textColor="@color/black"
-        android:onClick="goToChosenItem"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -188,20 +213,10 @@
         android:layout_marginEnd="244dp"
         android:layout_marginBottom="416dp"
         android:gravity="start"
+        android:onClick="goToChosenItem"
         android:text="@string/item_description"
         android:textColor="@color/black"
-        android:onClick="goToChosenItem"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/item_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="280dp"
-        android:layout_marginBottom="400dp"
-        android:onClick="goToChosenItem"
-        android:text="@string/item_name"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
