--- a/app/src/main/res/layout/activity_recipe_click.xml
+++ b/app/src/main/res/layout/activity_recipe_click.xml
@@ -26,6 +26,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="59dp"
+        android:onClick="goToAllRecipe"
+        android:layout_height="35dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/left_arrow" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -90,6 +101,7 @@
         <Button
             android:id="@+id/button"
             android:layout_width="158dp"
+            android:onClick="addToCart"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:background="@drawable/roundedbutton"
