--- a/app/src/main/res/layout/activity_recipe_page.xml
+++ b/app/src/main/res/layout/activity_recipe_page.xml
@@ -23,6 +23,7 @@
         android:layout_marginEnd="120dp"
         android:layout_marginBottom="564dp"
         android:contentDescription="@string/soup"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/hot_food" />
@@ -34,6 +35,7 @@
         android:layout_marginEnd="52dp"
         android:layout_marginBottom="564dp"
         android:contentDescription="@string/noodles"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/noodles" />
@@ -45,6 +47,7 @@
         android:layout_marginEnd="256dp"
         android:layout_marginBottom="564dp"
         android:contentDescription="@string/fried"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/frying_pan" />
@@ -56,6 +59,7 @@
         android:layout_marginEnd="188dp"
         android:layout_marginBottom="564dp"
         android:contentDescription="@string/grilled"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/bbq" />
@@ -67,6 +71,7 @@
         android:layout_marginEnd="328dp"
         android:layout_marginBottom="564dp"
         android:contentDescription="@string/all"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/dinner" />
@@ -111,6 +116,7 @@
         android:layout_width="49dp"
         android:layout_height="45dp"
         android:layout_marginEnd="52dp"
+        android:onClick="goToCartRP"
         android:layout_marginBottom="5dp"
         android:contentDescription="@string/cart"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -148,6 +154,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="656dp"
         android:contentDescription="@string/searchIcon"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/magnifiying_glass" />
@@ -167,7 +174,7 @@
         tools:visibility="gone" />
 
     <TextView
-        android:id="@+id/item_price"
+        android:id="@+id/groceryItemPriceSpecific"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="236dp"
@@ -248,7 +255,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recipeRV"
         android:layout_width="match_parent"
-        android:layout_height="472dp"
+        android:layout_height="500dp"
         android:layout_marginBottom="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
