--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -32,10 +32,11 @@
         android:id="@+id/full_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="600dp"
         android:text="@string/full_name"
         android:textAllCaps="false"
+        android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="20pt"
         app:layout_constraintBottom_toBottomOf="parent"
